2000-10-04  Tanaka Akira  <akr@zsh.org>

	* 12872: Completion/User/_cvs: Fix modules completion when a cvsroot
	specified in a command line begins with tilde.  Generate subcommand
	list from `cvs --help-commands' and `cvs --help-synonyms'.  Complete
	remote modules. Complete vendor branch for a second argument of
	`cvs import'.  Use _call.

2000-10-02  Bart Schaefer  <schaefer@zsh.org>

	* 12869: Src/builtin.c, Src/exec.c, Src/glob.c, Src/signals.c,
	Src/utils.c: Change several zerr() to zwarn(), either because
	errflag was immediately cleared after calling zerr(), or to make
	builtin commands fail normally (with nonzero exit status) rather
	than aborting all the way back to top level.

2000-10-01  Clint Adams  <schizo@debian.org>

	* unposted: Src/Zle/compresult.c: remove unused variable declaration.

2000-09-27  Clint Adams  <schizo@debian.org>

	* 12863: Src/string.c, Src/Zle/compresult.c: remove ztrdupstring(),
	fold guts back into ztat(), change memory allocation to VARARR.

2000-09-25  Bart Schaefer  <schaefer@zsh.org>

	* 12862: Src/exec.c: Fix STTY parameter to match documentation.
	(Plus unposted addition at the end of execcmd() to clear STTYval.)

2000-09-22  Clint Adams  <schizo@debian.org>

	* 12860: Src/jobs.c: don't check length against PATH_MAX or
	truncate.

	* 12859: Src/string.c, Src/Zle/compresult.c:
	dynamically allocate buffer in ztat, remove
	duplication loop to ztrdupstrip().

2000-09-20  Bart Schaefer  <schaefer@zsh.org>

	* 12851, 12852: Completion/Commands/_expand_word,
	Completion/Core/_expand, Doc/Zsh/compsys.yo: Change the way the
	completers are selected for _expand_word; clarify and update doc.

2000-09-20  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

	* 12848: Doc/Zsh/zle.yo: Alphabetize list of parameters

	* 12842 with corrections of Bart: Doc/Zsh/contrib.yo: Clarify
	digest file usage.

2000-09-19  Clint Adams  <schizo@debian.org>

	* 12847: Src/builtin.c: dynamically allocate z and buf in
	bin_whence().
